Adicionada as sagas

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <ul class="temporadas">
             <li>
-                <a href="">
+                <a href="/dbc.html">
                     <h3 class="nome-temporada">Dragon Ball</h3>
                     <img class="imagem-temporada" src="./src/imagens/dragon-ball-classico.jpg"
                         alt="dragon ball clássico">
@@ -43,7 +43,7 @@
                     grandes aventuras.</p>
             </li>
             <li>
-                <a href="">
+                <a href="./dbz.html">
                     <h3 class="nome-temporada">Dragon Ball Z</h3>
                     <img class="imagem-temporada-dois" src="./src/imagens/dragon-ball-z.webp" alt="dragon ball z">
                 </a>
@@ -53,7 +53,7 @@
                     do Dragon Ball original.</p>
             </li>
             <li>
-                <a href="">
+                <a href="./dbs.html">
                     <h3 class="nome-temporada">Dragon Ball Super</h3>
                     <img class="imagem-temporada-dois" src="./src/imagens/dragon-ball-super.jpg"
                         alt="dragon ball super">
@@ -64,7 +64,7 @@
                     últimas aventuras.</p>
             </li>
             <li>
-                <a href="">
+                <a href="./dbgt.html">
                     <h3 class="nome-temporada">Dragon Ball Gt</h3>
                     <img class="imagem-temporada" src="./src/imagens/dragon-ball-gt.webp" alt="dragon ball gt">
                 </a>
