vendo de conserta

--- a/dbc.html
+++ b/dbc.html
@@ -30,7 +30,7 @@
         </ul>
     </header>
     <main class="principal-da-obra">
-        <h1 class="titulo">Dragon Ball</h1>
+        <h1 class="titulo">Dragon Ball Clássico</h1>
         <div class="imagem-temporada">
             <img src="./src/imagens/dragon-ball-classico.jpg" alt="dragon ball clássico">
         </div>
