--- a/dbgt.html
+++ b/dbgt.html
@@ -30,7 +30,7 @@
         </ul>
     </header>
     <main class="principal-da-obra">
-        <h1 class="titulo">Dragon Ball</h1>
+        <h1 class="titulo">Dragon Ball GT</h1>
         <div class="imagem-temporada">
             <img src="./src/imagens/dragon-ball-gt.webp" alt="dragon ball gt">
         </div>
