mais um conserto

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <ul class="temporadas">
             <li>
-                <a href="/dbc.html">
+                <a href="./dbc.html">
                     <h3 class="nome-temporada">Dragon Ball</h3>
                     <img class="imagem-temporada" src="./src/imagens/dragon-ball-classico.jpg"
                         alt="dragon ball clássico">
