adicionada sagas e personagens, e atualizações.

--- a/dbgt.html
+++ b/dbgt.html
@@ -13,14 +13,16 @@
 <body>
     <header>
         <h1>
-            <img class="img-logo" src="./src/imagens/dragon-ball-logo.png" alt="logo dragon ball">
+            <a href="./index.html">
+                <img class="img-logo" src="./src/imagens/dragon-ball-logo.png" alt="logo dragon ball">
+            </a>
         </h1>
         <ul>
             <li>
-                <a class="personagens" href="">Personagens</a>
+                <a class="personagens" href="./personagens.html">Personagens</a>
             </li>
             <li>
-                <a class="sagas" href="">Sagas</a>
+                <a class="sagas" href="./sagas.html">Sagas</a>
             </li>
             <!-- <li>
                 <button id="botao-troca-tema">
@@ -34,9 +36,7 @@
         <div class="imagem-temporada">
             <img src="./src/imagens/dragon-ball-gt.webp" alt="dragon ball gt">
         </div>
-        <p class="descricao-obra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis molestiae dolorem, laborum repudiandae, quae
-            officiis repellendus enim exercitationem obcaecati aliquam ullam suscipit mollitia! Ab hic velit, suscipit
-            quidem eaque mollitia.</p>
+        <p class="descricao-obra">Dragon Ball GT é uma série de anime produzida pelo estúdio Toei Animation e a terceira da franquia Dragon Ball, foi aficionado e registrado como uma história a parte por Akira Toriyama. Dragon Ball GT é a série mais curta das quatro produzidas, exibida entre 7 de Fevereiro de 1996 e 19 de Novembro de 1997, composta por apenas 64 episódios. Diferente das duas séries de anime anteriores, Dragon Ball e Dragon Ball Z, GT não foi adaptado o mangá original Dragon Ball escrita por Akira Toriyama, mas foi criado como uma sequência da série de anime Dragon Ball Z, com uma história original usando os mesmos personagens e universo, que segue as façanhas de Goku, sua neta Pan e seus vários associados. No entanto, Toriyama desenhou alguns dos novos personagens introduzidos no programa.</p>
         <h3 class="sagas-da-temporada">Sagas</h3>
         <ol>
             <li class="listagem-das-sagas">
