--- a/dbz.html
+++ b/dbz.html
@@ -13,14 +13,16 @@
 <body>
     <header>
         <h1>
-            <img class="img-logo" src="./src/imagens/dragon-ball-logo.png" alt="logo dragon ball">
+            <a href="./index.html">
+                <img class="img-logo" src="./src/imagens/dragon-ball-logo.png" alt="logo dragon ball">
+            </a>
         </h1>
         <ul>
             <li>
-                <a class="personagens" href="">Personagens</a>
+                <a class="personagens" href="./personagens.html">Personagens</a>
             </li>
             <li>
-                <a class="sagas" href="">Sagas</a>
+                <a class="sagas" href="./sagas.html">Sagas</a>
             </li>
             <!-- <li>
                 <button id="botao-troca-tema">
@@ -34,10 +36,7 @@
         <div class="imagem-temporada">
             <img src="./src/imagens/dragon-ball-z.webp" alt="dragon ball z">
         </div>
-        <p class="descricao-obra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis molestiae dolorem,
-            laborum repudiandae, quae
-            officiis repellendus enim exercitationem obcaecati aliquam ullam suscipit mollitia! Ab hic velit, suscipit
-            quidem eaque mollitia.</p>
+        <p class="descricao-obra">O sucesso da série Dragon Ball levou à criação da continuação, Dragon Ball Z, sendo um dos animes mais conhecidos de todos os tempos. Esta série aparece recheada de longos combates com muita ação. Em Dragon Ball Z, as histórias possuem um clima mais sério que as de seu antecessor. Substituíram a comédia, mas o humor ainda existe em muitas partes da série. Possui vários episódios em que o suspense é entrelaçado aos acontecimentos que primeiramente não parecem ter grande relevância, ou de fatos despercebidos e revelados com maiores detalhes no auge de tal acontecimento.</p>
         <h3 class="sagas-da-temporada">Sagas</h3>
         <ol>
             <li class="listagem-das-sagas">
