--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </h1>
         <ul>
             <li>
-                <a class="personagens" href="">Personagens</a>
+                <a class="personagens" href="./personagens.html">Personagens</a>
             </li>
             <li>
-                <a class="sagas" href="">Sagas</a>
+                <a class="sagas" href="./sagas.html">Sagas</a>
             </li>
             <!-- <li>
                 <button id="botao-troca-tema">
