--- a/dbc.html
+++ b/dbc.html
@@ -13,14 +13,16 @@
 <body>
     <header>
         <h1>
-            <img class="img-logo" src="./src/imagens/dragon-ball-logo.png" alt="logo dragon ball">
+            <a href="./index.html">
+                <img class="img-logo" src="./src/imagens/dragon-ball-logo.png" alt="logo dragon ball">
+            </a>
         </h1>
         <ul>
             <li>
-                <a class="personagens" href="">Personagens</a>
+                <a class="personagens" href="./personagens.html">Personagens</a>
             </li>
             <li>
-                <a class="sagas" href="">Sagas</a>
+                <a class="sagas" href="./sagas.html">Sagas</a>
             </li>
             <!-- <li>
                 <button id="botao-troca-tema">
@@ -34,10 +36,7 @@
         <div class="imagem-temporada">
             <img src="./src/imagens/dragon-ball-classico.jpg" alt="dragon ball clássico">
         </div>
-        <p class="descricao-obra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis molestiae dolorem,
-            laborum repudiandae, quae
-            officiis repellendus enim exercitationem obcaecati aliquam ullam suscipit mollitia! Ab hic velit, suscipit
-            quidem eaque mollitia.</p>
+        <p class="descricao-obra">Dragon Ball segue as aventuras do protagonista, Son Goku, desde sua infância até a idade adulta enquanto ele treina artes marciais e explora o mundo em busca de sete esferas conhecidas como as Esferas do Dragão, que convocam um dragão que concede um desejo quando reunidas. Ao longo de sua jornada, Goku faz vários amigos e luta contra uma grande variedade de vilões, muitos dos quais também procuram as Esferas do Dragão.</p>
         <h3 class="sagas-da-temporada">Sagas</h3>
         <ol>
             <li class="listagem-das-sagas">
