--- a/dbs.html
+++ b/dbs.html
@@ -13,14 +13,16 @@
 <body>
     <header>
         <h1>
-            <img class="img-logo" src="./src/imagens/dragon-ball-logo.png" alt="logo dragon ball">
+            <a href="./index.html">
+                <img class="img-logo" src="./src/imagens/dragon-ball-logo.png" alt="logo dragon ball">
+            </a>
         </h1>
         <ul>
             <li>
-                <a class="personagens" href="">Personagens</a>
+                <a class="personagens" href="./personagens.html">Personagens</a>
             </li>
             <li>
-                <a class="sagas" href="">Sagas</a>
+                <a class="sagas" href="./sagas.html">Sagas</a>
             </li>
             <!-- <li>
                 <button id="botao-troca-tema">
@@ -34,10 +36,7 @@
         <div class="imagem-temporada">
             <img src="./src/imagens/dragon-ball-super.jpg" alt="dragon ball super">
         </div>
-        <p class="descricao-obra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis molestiae dolorem,
-            laborum repudiandae, quae
-            officiis repellendus enim exercitationem obcaecati aliquam ullam suscipit mollitia! Ab hic velit, suscipit
-            quidem eaque mollitia.</p>
+        <p class="descricao-obra">Dragon Ball Super segue as aventuras do protagonista Goku e seus amigos, depois de derrotar Majin Boo e trazer paz para Terra mais uma vez. Goku encontra seres de longe mais poderosos e atinge o poder de um deus. Ele defende a Terra contra as poderosas divindades destrutivas e viaja para outros universos para encarar oponentes mais poderosos, assim como inimigos quase imparáveis, enquanto descobre seus novos poderes sob os deuses do universo.</p>
         <h3 class="sagas-da-temporada">Sagas</h3>
         <ol>
             <li class="listagem-das-sagas">
